--- a/vignettes/MetENP_vignette_Jupyter_notebook.ipynb
+++ b/vignettes/MetENP_vignette_Jupyter_notebook.ipynb
@@ -1041,7 +1041,7 @@
    "source": [
     "### Get the gene and enzyme info\n",
     "\n",
-    "Here we get the information of genes involved in enriched pathways for specified organism"
+    "Here we get the information of genes involved in enriched pathways for specified organism and one can view specific columns by applying column filter by specifying column names of interest as shown."
    ]
   },
   {
@@ -1197,6 +1197,7 @@
    "source": [
     "met_gene_info = enzyme_gene_info (metenrichment, \"hsa\",\"sub_class\")\n",
     "head(met_gene_info)"
+    "head(met_gene_info[c("Metabolite", "gene_name", "ORGANISM", "PATHWAY", "Rxn_name", "EQUATION_more", "ENZYME")])"
    ]
   },
   {
