--- a/vignettes/MetENP_ST001742.ipynb
+++ b/vignettes/MetENP_ST001742.ipynb
@@ -943,7 +943,8 @@
     }
    ],
    "source": [
-    "metenrichment = metclassenrichment(df_metclass=sig_metabolites_kegg_id,refmet_class, metclass=\"sub_class\",enrich_stats=\"HG\",no=1)\n",
+    "# pass debug = 0 below or comment some lines to suppress some print output\n",
+    "metenrichment = metclassenrichment(df_metclass=sig_metabolites_kegg_id,refmet_class, metclass=\"sub_class\",enrich_stats=\"HG\",no=1, debug = 1)\n",
     "print(head(metenrichment))\n",
     "#knitr::kable(head(metenrichment))\n",
     "metenrichment[metenrichment$main_class %in% c(\"Ceramides\", \"Sphingomyelins\"), c(\"Metabolite\", \"pval\", \"super_class\", \"main_class\", \"sub_class\", \"HG p-value\")]\n",
