Updated ipynb and rmd file for HG pval notes

--- a/vignettes/MetENP_ST000915.ipynb
+++ b/vignettes/MetENP_ST000915.ipynb
@@ -2085,14 +2085,21 @@
    "source": [
     "### Get pathway enrichment sore.\n",
     "\n",
-    "Once we have the pathway information, we can calculate enrichment score of pathways. Again, here i have used hypergeometric score. For hypergeometric score, we need to know the total number of kegg compounds that are linked to kegg pathways. \n",
-    "N = total no. of cmpds linked to kegg pathway (this is the step which might take long), so I advice to run the script comp_linkedto_pathways() just the first time or after 6 months or so if desired to run the pipeline again. save the result from comp_linkedto_pathways() and load it. Loading from saved file would save time for another analysis with another study. However the package takes care of loading. Save the data in the data folder.\n",
+    "This function also utilizes korg dataset from pathview package.\n",
     "\n",
-    "L = No. of cmpds in a pathway\n",
-    "M= no. of altered cmpds in a pathway\n",
-    "K =  total no. of altered cmpds\n",
-    "phyper(M,L, N-L, K)\n",
+    "Once we have the pathway information, we can calculate enrichment score of pathways. Again, here I have used hypergeometric (HG) score. For hypergeometric score, we need to know the total number of kegg compounds that are linked to kegg pathways.\n",
     "\n",
+    "N = total no. of compounds/metabolites linked to all kegg pathways or the total number of metabolites detected in a study.\n",
+    "\n",
+    "In the former case, this step might take long time, so I advice to run the script comp_linkedto_pathways() just the first time or after 6 months or so if desired to run the pipeline again. Save the result from comp_linkedto_pathways() and load it. Loading from saved file would save time for another analysis with another study. However the package takes care of loading. Save the data in the data folder.\n",
+    "\n",
+    "L = No. of significant metabolites detected in a study\n",
+    "\n",
+    "M = No. of significant metabolites detected in a metabolite class or pathway\n",
+    "\n",
+    "k = Total no. of metabolites detected in a metabolite class/pathway\n",
+    "\n",
+    "p-value = phyper(M-1, L, N-L, k, lower.tail=FALSE) # as in the actual R code # originally, it was wriiten as: phyper(M, L, N-L, K)\n",
     "\n",
     "This function also utilizes korg dataset from pathview package."
    ]
@@ -2531,13 +2538,6 @@
    "source": [
     "met_gene_info2=data.table::data.table(rclass_info)[,lapply(.SD, function(x) toString(unique(x))), by = 'Metabolite']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
