Added explanation of 50percent for handling NAs

--- a/vignettes/MetENP_ST001742.ipynb
+++ b/vignettes/MetENP_ST001742.ipynb
@@ -473,7 +473,7 @@
     "\n",
     "2) remove_NAs: where Cols with NAs values are removed\n",
     "\n",
-    "3) 50percent: where cols with more than 50% NAs values are removed\n",
+    "3) 50percent: where cols with more than 50% NAs values are removed, and then the remaining NA values are replaced with half_of_min\n",
     "\n",
     "half_of_min is ideal when you wish to see which metabolites were present in either group. Very high fold change would mean it was present in either group. "
    ]
@@ -1190,8 +1190,6 @@
    "metadata": {},
    "source": [
     "### Get pathway enrichment sore.\n",
-    "\n",
-    "This function also utilizes korg dataset from pathview package.\n",
     "\n",
     "Once we have the pathway information, we can calculate enrichment score of pathways. Again, here I have used hypergeometric (HG) score. For hypergeometric score, we need to know the total number of kegg compounds that are linked to kegg pathways.\n",
     "\n",
